# flake8-qt-tr

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/flake8_qt_tr/: checker.py
tests/: conftest.py
