[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flake8-tr"
authors = [{ name = "ostr00000" }]
description = "Flake8 extension for detecting incorrect QT translation"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["flake8", "qt", "translation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
#    "Development Status :: 3 - Alpha",
#    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["flake8>=6.0.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ostr00000/flake8-tr"

[tool.ruff]
select = ["ALL"]
ignore = []
fixable = ["ALL"]
unfixable = []

per-file-ignores = {}
